# mental.h

./: .clang-format  .clang-tidy  .clangd  .gitmodules  CAMERA_FIX_SUMMARY.md  CMakeLists.txt  Doxyfile  MoltenVK_icd_absolute.json  README.md  REFACTORING_SUMMARY.md  ROOT_NODE_GUIDE.md  SCRIPT_USAGE.md  compile_commands.json  run_with_moltenvk.sh  test_window.cpp
.cache/clangd/index/: Environment.hpp.058D420642CECA49.idx  Math.hpp.8B8D2433A6B5D211.idx  Object.hpp.33820213C8DCBC48.idx  Render.cpp.9B0E30CF2C8E15D3.idx  Renderer.hpp.09BC26D9375BEEC7.idx  SDK.cpp.4433401BEA8F92B6.idx  SDK.hpp.14A3459F5D839E0B.idx  Script.hpp.79A5B1B642ED173C.idx  Shader.cpp.B72EF9022C7C15A0.idx  Shader.hpp.3962C1F2B6F5B29E.idx  Shader.hpp.610840F46AE9B347.idx  Texture.hpp.7D6F6DCAA9056D7D.idx  Utils.hpp.13DD440D80D09127.idx  Window.hpp.DFED65907956EC6C.idx  World.hpp.967EA2AA2AACC9F2.idx  example_usage.c.46DD1A9F0FACFBDC.idx  imconfig.h.8407AF52ED908FFD.idx  imgui.cpp.E1B4D52B84975ECB.idx  imgui.h.A10E9DA3914EF9C0.idx  imgui_demo.cpp.AA5430A0B39F3CF6.idx  imgui_draw.cpp.B744CF66DFD2B41E.idx  imgui_impl_glfw.cpp.F1FAF99C5BC44F53.idx  imgui_impl_glfw.h.64F9923020E15132.idx  imgui_impl_opengl3.cpp.8675B90AF6C236C6.idx  imgui_impl_opengl3.h.25F10B60F7D9A6EB.idx  imgui_impl_opengl3_loader.h.9ACD4A52B11D690C.idx  imgui_internal.h.B9FDC2550039B3B6.idx  imgui_tables.cpp.E66FF10A5491D47E.idx  imgui_widgets.cpp.80657FE8370F81AF.idx  imstb_rectpack.h.52856F2EE9411B07.idx  imstb_textedit.h.DD0D8CE6C7D94969.idx  imstb_truetype.h.B675DBCF0B6842C8.idx  lua_object.c.8197B93A765AFD1A.idx  lua_object.h.47231FEDD5AAC93B.idx  material.c.C0AAC50456CF7AAC.idx  material.h.6B7BE64F9F5A574D.idx  mental.cpp.A968CC52A59A5EF5.idx  mental.cpp.C78B9CE7DD074EF9.idx  objects.c.28493FA898A99A6C.idx  objects.h.F3236C082B4EBEE8.idx  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Common/Scripts/: README.md  camera_control.lua  camera_keyboard.lua  camera_mouse.lua  camera_mouse_click_debug.lua  camera_mouse_debug.lua  camera_mouse_smooth.lua  camera_test.lua  demo_keyboard.lua  glowing_triangle.lua  glowing_triangle_bottom.lua  glowing_triangle_single.lua  input_test.lua  keyboard_control.lua  movement.lua  pulse.lua  root_scene.lua  simple_rectangle.lua  simple_test.lua  simple_triangle.lua  smooth_control.lua  test_horizontal_triangle.lua  test_positions.lua  triangle_fast_horizontal.lua  triangle_horizontal_movement.lua  triangle_linear_movement.lua
Common/Shaders/Glow/: fragment_shader.glsl  vertex_shader.glsl
Common/Shaders/Rainbow/: fragment_shader.glsl  vertex_shader.glsl
Engine/: mental.cpp
Engine/Common/Assets/shaders/: basic.frag  basic_legacy.frag
GameEngine/: mental.cpp
GameEngine/Common/FBX Assets/cube/: cube.mtl
GameEngine/Common/Scripts/: camera_controller.lua  triangle_animation.txt  triangle_controller.lua
GameEngine/Common/Shaders/: rubiks_cube.vert
SDK/: sdk.hpp
SDK/Camera/: CMentalCamera.hpp
SDK/Input/: CMentalInput.hpp
SDK/Math/: Math.hpp
SDK/Objects/: Camera.hpp  Environment.hpp  Object.hpp  Script.hpp  Shader.hpp  Texture.hpp  World.hpp
SDK/Renderer/: CMentalRenderer.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.hpp
SDK/Renderer/Material/: CMentalShader.hpp  CMentalShaderMaterial.hpp
SDK/Renderer/Object/: CMentalFBXModel.cpp  CMentalFBXModel.hpp  CMentalOBJModel.cpp  CMentalOBJModel.hpp  CMentalObject.hpp  CMentalTriangle.hpp
SDK/Renderer/RenderPipeline/: CMentalRenderPipeline.hpp
SDK/Scripting/: CMentalCameraController.hpp  CMentalScriptEngine.hpp
SDK/UI/: CMentalImGui.cpp  CMentalImGui.hpp
SDK/Utils/: Utils.hpp
SDK/Window/: Window.hpp
SDK/WindowManager/: CMentalWindowManager.cpp  CMentalWindowManager.hpp
Source/: example_mentalsdk.cpp  example_multiple_triangles.cpp  example_root_node.cpp  example_smooth_camera.cpp  example_triangle.cpp  example_usage.c  mental.cpp  mentalsdk.cpp  mentalsdk.hpp
Source/Graphics/: Graphics.hpp
Source/core/: mental.h
Source/graphics/objects/: lua_object.c  lua_object.h  material.c  material.h  objects.c  objects.h
Source/graphics/renderer/: opengl.c  opengl.h  shader_loader.h  shaders.h  vulkan.h
Source/graphics/wm/: wm.c  wm.h
